<resources>
    <string name="app_name">أدعيةوإمساكية شهر رمضان</string>
    <string name="prayer_times">مؤقيت الإذان</string>
    <string name="constipation_time">مؤقيت الإمساك</string>
    <string name="suhoor_time">مؤقيت السحور</string>
    <string name="Invite_breakfast_time">ادعيه وقت الافطار</string>
    <string name="pray_for_suhoor">أدعيه وقت السحور</string>
    <string name="remember_allah">أذكر الله</string>
    <string name="remember_the_morning">اذكار الصباح</string>
    <string name="evening_prayers">اذكار المساء</string>
    <string name="ev_txt1">أَعُوذُ بِاللهِ مِنْ الشَّيْطَانِ الرَّجِيمِ
اللّهُ لاَ إِلَـهَ إِلاَّ هُوَ الْحَيُّ الْقَيُّومُ لاَ تَأْخُذُهُ سِنَةٌ وَلاَ نَوْمٌ لَّهُ مَا فِي السَّمَاوَاتِ وَمَا فِي الأَرْضِ مَن ذَا الَّذِي يَشْفَعُ عِنْدَهُ إِلاَّ بِإِذْنِهِ يَعْلَمُ مَا بَيْنَ أَيْدِيهِمْ وَمَا خَلْفَهُمْ وَلاَ يُحِيطُونَ بِشَيْءٍ مِّنْ عِلْمِهِ إِلاَّ بِمَا شَاء وَسِعَ كُرْسِيُّهُ السَّمَاوَاتِ وَالأَرْضَ وَلاَ يَؤُودُهُ حِفْظُهُمَا وَهُوَ الْعَلِيُّ الْعَظِيمُ. [آية الكرسى - البقرة 255].
من قالها حين يصبح أجير من الجن حتى يمسى ومن قالها حين يمسى أجير من الجن حتى يصبح. </string>
    <string name="ev_txt2">أَعُوذُ بِاللهِ مِنْ الشَّيْطَانِ الرَّجِيمِ
آمَنَ الرَّسُولُ بِمَا أُنْزِلَ إِلَيْهِ مِنْ رَبِّهِ وَالْمُؤْمِنُونَ ۚ كُلٌّ آمَنَ بِاللَّهِ وَمَلَائِكَتِهِ وَكُتُبِهِ وَرُسُلِهِ لَا نُفَرِّقُ بَيْنَ أَحَدٍ مِنْ رُسُلِهِ ۚ وَقَالُوا سَمِعْنَا وَأَطَعْنَا ۖ غُفْرَانَكَ رَبَّنَا وَإِلَيْكَ الْمَصِيرُ. لَا يُكَلِّفُ اللَّهُ نَفْسًا إِلَّا وُسْعَهَا لَهَا مَا كَسَبَتْ وَعَلَيْهَا مَا اكْتَسَبَتْ رَبَّنَا لَا تُؤَاخِذْنَا إِنْ نَّسِينَآ أَوْ أَخْطَأْنَا رَبَّنَا وَلَا تَحْمِلْ عَلَيْنَا إِصْرًا كَمَا حَمَلْتَهُ عَلَى الَّذِينَ مِنْ قَبْلِنَا رَبَّنَا وَلَا تُحَمِّلْنَا مَا لَا طَاقَةَ لَنَا بِهِ وَاعْفُ عَنَّا وَاغْفِرْ لَنَا وَارْحَمْنَا أَنْتَ مَوْلَانَا فَانْصُرْنَا عَلَى الْقَوْمِ الْكَافِرِينَ. [البقرة 285 - 286].
من قرأ آيتين من آخر سورة البقرة في ليلة كفتاه.</string>
    <string name="ev_txt3">بِسْمِ اللهِ الرَّحْمنِ الرَّحِيم
قُلْ هُوَ ٱللَّهُ أَحَدٌ، ٱللَّهُ ٱلصَّمَدُ، لَمْ يَلِدْ وَلَمْ يُولَدْ، وَلَمْ يَكُن لَّهُۥ كُفُوًا أَحَدٌۢ.
من قالها حين يصبح وحين يمسى كفته من كل شىء (الإخلاص والمعوذتين).
    </string>
    <string name="ev_txt4">بِسْمِ اللهِ الرَّحْمنِ الرَّحِيم
قُلْ أَعُوذُ بِرَبِّ ٱلْفَلَقِ، مِن شَرِّ مَا خَلَقَ، وَمِن شَرِّ غَاسِقٍ إِذَا وَقَبَ، وَمِن شَرِّ ٱلنَّفَّٰثَٰتِ فِى ٱلْعُقَدِ، وَمِن شَرِّ حَاسِدٍ إِذَا حَسَدَ.
    </string>
    <string name="ev_txt5">بِسْمِ اللهِ الرَّحْمنِ الرَّحِيم
قُلْ أَعُوذُ بِرَبِّ ٱلنَّاسِ، مَلِكِ ٱلنَّاسِ، إِلَٰهِ ٱلنَّاسِ، مِن شَرِّ ٱلْوَسْوَاسِ ٱلْخَنَّاسِ، ٱلَّذِى يُوَسْوِسُ فِى صُدُورِ ٱلنَّاسِ، مِنَ ٱلْجِنَّةِ وَٱلنَّاسِ.
    </string>
    <string name="ev_txt6">أَمْسَيْـنا وَأَمْسـى المـلكُ لله وَالحَمدُ لله ، لا إلهَ إلاّ اللّهُ وَحدَهُ لا شَريكَ لهُ، لهُ المُـلكُ ولهُ الحَمْـد، وهُوَ على كلّ شَيءٍ قدير ، رَبِّ أسْـأَلُـكَ خَـيرَ ما في هـذهِ اللَّـيْلَةِ وَخَـيرَ ما بَعْـدَهـا ، وَأَعـوذُ بِكَ مِنْ شَـرِّ ما في هـذهِ اللَّـيْلةِ وَشَرِّ ما بَعْـدَهـا ، رَبِّ أَعـوذُبِكَ مِنَ الْكَسَـلِ وَسـوءِ الْكِـبَر ، رَبِّ أَعـوذُ بِكَ مِنْ عَـذابٍ في النّـارِ وَعَـذابٍ في القَـبْر.
    </string>
    <string name="ev_txt7">اللّهـمَّ أَنْتَ رَبِّـي لا إلهَ إلاّ أَنْتَ ، خَلَقْتَنـي وَأَنا عَبْـدُك ، وَأَنا عَلـى عَهْـدِكَ وَوَعْـدِكَ ما اسْتَـطَعْـت ، أَعـوذُبِكَ مِنْ شَـرِّ ما صَنَـعْت ، أَبـوءُ لَـكَ بِنِعْـمَتِـكَ عَلَـيَّ وَأَبـوءُ بِذَنْـبي فَاغْفـِرْ لي فَإِنَّـهُ لا يَغْـفِرُ الذُّنـوبَ إِلاّ أَنْتَ .
من قالها موقنا بها حين يمسى ومات من ليلته دخل الجنة وكذلك حين يصبح.
    </string>
    <string name="ev_txt8">رَضيـتُ بِاللهِ رَبَّـاً وَبِالإسْلامِ ديـناً وَبِمُحَـمَّدٍ صلى الله عليه وسلم نَبِيّـاً.
من قالها حين يصبح وحين يمسى كان حقا على الله أن يرضيه يوم القيامة.
    </string>
    <string name="ev_txt9">اللّهُـمَّ إِنِّـي أَمسيتُ أُشْـهِدُك ، وَأُشْـهِدُ حَمَلَـةَ عَـرْشِـك ، وَمَلَائِكَتَكَ ، وَجَمـيعَ خَلْـقِك ، أَنَّـكَ أَنْـتَ اللهُ لا إلهَ إلاّ أَنْـتَ وَحْـدَكَ لا شَريكَ لَـك ، وَأَنَّ ُ مُحَمّـداً عَبْـدُكَ وَرَسـولُـك.
من قالها أعتقه الله من النار.
    </string>
    <string name="ev_txt10">اللّهُـمَّ ما أَمسى بي مِـنْ نِعْـمَةٍ أَو بِأَحَـدٍ مِـنْ خَلْـقِك ، فَمِـنْكَ وَحْـدَكَ لا شريكَ لَـك ، فَلَـكَ الْحَمْـدُ وَلَـكَ الشُّكْـر.
من قالها حين يمسى أدى شكر يومه.
    </string>
    <string name="ev_txt11">حَسْبِـيَ اللّهُ لا إلهَ إلاّ هُوَ عَلَـيهِ تَوَكَّـلتُ وَهُوَ رَبُّ العَرْشِ العَظـيم.
من قالها كفاه الله ما أهمه من أمر الدنيا والأخرة.
    </string>
    <string name="ev_txt12">بِسـمِ اللهِ الذي لا يَضُـرُّ مَعَ اسمِـهِ شَيءٌ في الأرْضِ وَلا في السّمـاءِ وَهـوَ السّمـيعُ العَلـيم.
لم يضره من الله شيء.
    </string>
    <string name="ev_txt13">اللّهُـمَّ بِكَ أَمْسَـينا وَبِكَ أَصْـبَحْنا، وَبِكَ نَحْـيا وَبِكَ نَمُـوتُ وَإِلَـيْكَ الْمَصِيرُ.
    </string>
    <string name="ev_txt14">أَمْسَيْنَا عَلَى فِطْرَةِ الإسْلاَمِ، وَعَلَى كَلِمَةِ الإِخْلاَصِ، وَعَلَى دِينِ نَبِيِّنَا مُحَمَّدٍ صَلَّى اللهُ عَلَيْهِ وَسَلَّمَ، وَعَلَى مِلَّةِ أَبِينَا إبْرَاهِيمَ حَنِيفاً مُسْلِماً وَمَا كَانَ مِنَ المُشْرِكِينَ.
    </string>
    <string name="ev_txt15">سُبْحـانَ اللهِ وَبِحَمْـدِهِ عَدَدَ خَلْـقِه ، وَرِضـا نَفْسِـه ، وَزِنَـةَ عَـرْشِـه ، وَمِـدادَ كَلِمـاتِـه.
</string>
    <string name="ev_txt16">اللّهُـمَّ عافِـني في بَدَنـي ، اللّهُـمَّ عافِـني في سَمْـعي ، اللّهُـمَّ عافِـني في بَصَـري ، لا إلهَ إلاّ أَنْـتَ. </string>
    <string name="ev_txt17">اللّهُـمَّ إِنّـي أَعـوذُ بِكَ مِنَ الْكُـفر ، وَالفَـقْر ، وَأَعـوذُ بِكَ مِنْ عَذابِ القَـبْر ، لا إلهَ إلاّ أَنْـتَ. </string>
    <string name="ev_txt18">اللّهُـمَّ إِنِّـي أسْـأَلُـكَ العَـفْوَ وَالعـافِـيةَ في الدُّنْـيا وَالآخِـرَة ، اللّهُـمَّ إِنِّـي أسْـأَلُـكَ العَـفْوَ وَالعـافِـيةَ في ديني وَدُنْـيايَ وَأهْـلي وَمالـي ، اللّهُـمَّ اسْتُـرْ عـوْراتي وَآمِـنْ رَوْعاتـي ، اللّهُـمَّ احْفَظْـني مِن بَـينِ يَدَيَّ وَمِن خَلْفـي وَعَن يَمـيني وَعَن شِمـالي ، وَمِن فَوْقـي ، وَأَعـوذُ بِعَظَمَـتِكَ أَن أُغْـتالَ مِن تَحْتـي.
</string>
    <string name="ev_txt19">يَا حَيُّ يَا قيُّومُ بِرَحْمَتِكَ أسْتَغِيثُ أصْلِحْ لِي شَأنِي كُلَّهُ وَلاَ تَكِلْنِي إلَى نَفْسِي طَـرْفَةَ عَيْنٍ.</string>
    <string name="ev_txt20">أَمْسَيْنا وَأَمْسَى الْمُلْكُ للهِ رَبِّ الْعَالَمَيْنِ، اللَّهُمَّ إِنَّي أسْأَلُكَ خَيْرَ هَذَه اللَّيْلَةِ فَتْحَهَا ونَصْرَهَا، ونُوْرَهَا وبَرَكَتهَا، وَهُدَاهَا، وَأَعُوذُ بِكَ مِنْ شَرِّ مَا فيهِا وَشَرَّ مَا بَعْدَهَا.
    </string>
    <string name="ev_txt21">اللّهُـمَّ عالِـمَ الغَـيْبِ وَالشّـهادَةِ فاطِـرَ السّماواتِ وَالأرْضِ رَبَّ كـلِّ شَـيءٍ وَمَليـكَه ، أَشْهَـدُ أَنْ لا إِلـهَ إِلاّ أَنْت ، أَعـوذُ بِكَ مِن شَـرِّ نَفْسـي وَمِن شَـرِّ الشَّيْـطانِ وَشِرْكِهِ ، وَأَنْ أَقْتَـرِفَ عَلـى نَفْسـي سوءاً أَوْ أَجُـرَّهُ إِلـى مُسْـلِم.
    </string>
    <string name="ev_txt22">أَعـوذُ بِكَلِمـاتِ اللّهِ التّـامّـاتِ مِنْ شَـرِّ ما خَلَـق. </string>
    <string name="ev_txt23">اللَّهُمَّ صَلِّ وَسَلِّمْ وَبَارِكْ على نَبِيِّنَا مُحمَّد.
من صلى على حين يصبح وحين يمسى ادركته شفاعتى يوم القيامة.
    </string>
    <string name="ev_txt24">اللَّهُمَّ إِنَّا نَعُوذُ بِكَ مِنْ أَنْ نُشْرِكَ بِكَ شَيْئًا نَعْلَمُهُ ، وَنَسْتَغْفِرُكَ لِمَا لَا نَعْلَمُهُ. </string>
    <string name="ev_txt25">اللَّهُمَّ إِنِّي أَعُوذُ بِكَ مِنْ الْهَمِّ وَالْحَزَنِ، وَأَعُوذُ بِكَ مِنْ الْعَجْزِ وَالْكَسَلِ، وَأَعُوذُ بِكَ مِنْ الْجُبْنِ وَالْبُخْلِ، وَأَعُوذُ بِكَ مِنْ غَلَبَةِ الدَّيْنِ، وَقَهْرِ الرِّجَالِ. </string>
    <string name="ev_txt26">أسْتَغْفِرُ اللهَ العَظِيمَ الَّذِي لاَ إلَهَ إلاَّ هُوَ، الحَيُّ القَيُّومُ، وَأتُوبُ إلَيهِ. </string>
    <string name="ev_txt27">يَا رَبِّ , لَكَ الْحَمْدُ كَمَا يَنْبَغِي لِجَلَالِ وَجْهِكَ , وَلِعَظِيمِ سُلْطَانِكَ. </string>
    <string name="ev_txt28">لَا إلَه إلّا اللهُ وَحْدَهُ لَا شَرِيكَ لَهُ، لَهُ الْمُلْكُ وَلَهُ الْحَمْدُ وَهُوَ عَلَى كُلِّ شَيْءِ قَدِيرِ.
كانت له عدل عشر رقاب، وكتبت له مئة حسنة، ومحيت عنه مئة سيئة، وكانت له حرزا من الشيطان. </string>
    <string name="ev_txt29">اللَّهُمَّ أَنْتَ رَبِّي لا إِلَهَ إِلا أَنْتَ ، عَلَيْكَ تَوَكَّلْتُ ، وَأَنْتَ رَبُّ الْعَرْشِ الْعَظِيمِ , مَا شَاءَ اللَّهُ كَانَ ، وَمَا لَمْ يَشَأْ لَمْ يَكُنْ ، وَلا حَوْلَ وَلا قُوَّةَ إِلا بِاللَّهِ الْعَلِيِّ الْعَظِيمِ , أَعْلَمُ أَنَّ اللَّهَ عَلَى كُلِّ شَيْءٍ قَدِيرٌ ، وَأَنَّ اللَّهَ قَدْ أَحَاطَ بِكُلِّ شَيْءٍ عِلْمًا , اللَّهُمَّ إِنِّي أَعُوذُ بِكَ مِنْ شَرِّ نَفْسِي ، وَمِنْ شَرِّ كُلِّ دَابَّةٍ أَنْتَ آخِذٌ بِنَاصِيَتِهَا ، إِنَّ رَبِّي عَلَى صِرَاطٍ مُسْتَقِيمٍ. </string>
    <string name="ev_txt30">سُبْحـانَ اللهِ وَبِحَمْـدِهِ.
حُطَّتْ خَطَايَاهُ وَإِنْ كَانَتْ مِثْلَ زَبَدِ الْبَحْرِ. لَمْ يَأْتِ أَحَدٌ يَوْمَ الْقِيَامَةِ بِأَفْضَلَ مِمَّا جَاءَ بِهِ إِلَّا أَحَدٌ قَالَ مِثْلَ مَا قَالَ أَوْ زَادَ عَلَيْهِ.</string>
    <string name="d_1">(ذهب الظمأُ، وابتلَّت العروقُ، وثبت الأجرُ إن شاء الله)</string>
    <string name="d_2">(اللهمَّ إني أسألكَ برحمتكَ التي وَسِعَتْ كلَّ شيٍء أن تغفرَ لي ذنوبي).</string>
    <string name="d_3">(اللَّهُمَّ إنِّي أَعُوذُ بكَ مِنَ العَجْزِ، وَالْكَسَلِ، وَالْجُبْنِ، وَالْهَرَمِ، وَالْبُخْلِ، وَأَعُوذُ بكَ مِن عَذَابِ القَبْرِ، وَمِنْ فِتْنَةِ المَحْيَا وَالْمَمَاتِ).
    </string>
    <string name="d_4">(اللَّهُمَّ أعُوذُ برِضَاكَ مِن سَخَطِكَ، وبِمُعَافَاتِكَ مِن عُقُوبَتِكَ، وأَعُوذُ بكَ مِنْكَ لا أُحْصِي ثَنَاءً عَلَيْكَ أنْتَ كما أثْنَيْتَ علَى نَفْسِكَ).
    </string>
    <string name="d_5">(اللَّهمَّ إنِّي أعوذُ بك مِن عِلمٍ لا يَنفَعُ، وقلبٍ لا يَخشَعُ، ودُعاءٍ لا يُسمَعُ، ونفْسٍ لا تَشبَعُ، اللَّهمَّ إنِّي أعوذُ بك مِن هؤلاء الأربَعِ).
    </string>
    <string name="d_6">(اللَّهمَّ إنِّي أسألُكَ مِنَ الخيرِ كلِّهِ عاجلِهِ وآجلِهِ، ما عَلِمْتُ منهُ وما لم أعلَمْ، وأعوذُ بِكَ منَ الشَّرِّ كلِّهِ عاجلِهِ وآجلِهِ، ما عَلِمْتُ منهُ وما لم أعلَمْ، اللَّهمَّ إنِّي أسألُكَ من خيرِ ما سألَكَ عبدُكَ ونبيُّكَ، وأعوذُ بِكَ من شرِّ ما عاذَ بِهِ عبدُكَ ونبيُّكَ، اللَّهمَّ إنِّي أسألُكَ الجنَّةَ وما قرَّبَ إليها من قَولٍ أو عملٍ، وأعوذُ بِكَ منَ النَّارِ وما قرَّبَ إليها من قولٍ أو عملٍ، وأسألُكَ أن تجعلَ كلَّ قَضاءٍ قضيتَهُ لي خيرًا).
    </string>
    <string name="d_7">(اللهمَّ بعلْمِك الغيبِ، وقدْرتِك على الخلقِ أحْيِني ما علمتَ الحياةَ خيرًا لي، وتوفَّني إذا علِمْتَ الوفاةَ خيرًا لي. اللهمَّ وأسألُك خشيتَك في الغيبِ والشهادةِ، وأسألُك كلمةَ الإخلاصِ في الرضا والغضبِ، وأسألُك القصدَ في الفقرِ والغنى، وأسألُك نعيمًا لا ينفدُ وأسألُك قرةَ عينٍ لا تنقطعُ، وأسألُك الرضا بالقضاءِ، وأسألُك بَرْدَ العيْشِ بعدَ الموتِ، وأسألُك لذَّةَ النظرِ إلى وجهِك، والشوقَ إلى لقائِك، في غيرِ ضرَّاءَ مضرةٍ، ولا فتنةٍ مضلَّةٍ. اللهمَّ زيِّنا بزينةِ الإيمانِ، واجعلْنا هداةً مُهتدينَ).
    </string>
    <string name="d_8">(اللَّهُمَّ فإنِّي أَعُوذُ بكَ مِن فِتْنَةِ النَّارِ وَعَذَابِ النَّارِ، وَفِتْنَةِ القَبْرِ وَعَذَابِ القَبْرِ، وَمِنْ شَرِّ فِتْنَةِ الغِنَى، وَمِنْ شَرِّ فِتْنَةِ الفَقْرِ، وَأَعُوذُ بكَ مِن شَرِّ فِتْنَةِ المَسِيحِ الدَّجَّالِ، اللَّهُمَّ اغْسِلْ خَطَايَايَ بمَاءِ الثَّلْجِ وَالْبَرَدِ، وَنَقِّ قَلْبِي مِنَ الخَطَايَا، كما نَقَّيْتَ الثَّوْبَ الأبْيَضَ مِنَ الدَّنَسِ، وَبَاعِدْ بَيْنِي وبيْنَ خَطَايَايَ، كما بَاعَدْتَ بيْنَ المَشْرِقِ وَالْمَغْرِبِ، اللَّهُمَّ فإنِّي أَعُوذُ بكَ مِنَ الكَسَلِ، وَالْهَرَمِ، وَالْمَأْثَمِ، وَالْمَغْرَمِ).</string>
    <string name="label_fajr">Fajr</string>
    <string name="label_dhuhr">Dhuhr</string>
    <string name="label_asr">Asr</string>
    <string name="label_maghrib">Maghrib</string>
    <string name="label_ishaa">Ishaa</string>
    <string name="label_shurooq">Shurooq</string>
    <string name="test_time">03:00</string>
    <string name="no_connection_message">Please, Make your device online</string>
    <string name="retry_label">Retry</string>
    <string name="please_wait_message">Downloading data from the internet, please wait 2 minutes at most...</string>
</resources>